--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@metamask/sdk": "^0.6.0",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^6.6.4",
     "iconsax-react": "^0.0.8",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sats-connect": "^1.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
