--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.2",
+    "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "@headlessui/react": "^1.7.17",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
