--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.2",
     "@headlessui/react": "^1.7.17",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -17,7 +18,10 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^6.6.4",
+    "graphql-tag": "^2.12.6",
     "iconsax-react": "^0.0.8",
+    "lodash": "^4.17.21",
+    "lodash.get": "^4.4.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
