--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "ethers": "^6.6.4",
+    "ethers": "^6.7.1",
     "graphql-tag": "^2.12.6",
     "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
@@ -28,7 +28,8 @@
     "react-dom": "18.2.0",
     "sats-connect": "^1.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^9.0.0",
